debug hybrid_model training notebook

--- a/experiments_notebook/hybrid_model.ipynb
+++ b/experiments_notebook/hybrid_model.ipynb
@@ -19,6 +19,7 @@
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
         "from transformers import AutoTokenizer\n",
+        "tokenizer = AutoTokenizer.from_pretrained(\"Intel/dynamic_tinybert\")\n",
         "\n",
         "from sklearn.metrics import f1_score, accuracy_score\n",
         "\n",
@@ -34,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -55,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "sbVwgBWq6wKl"
       },
@@ -67,7 +68,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -79,7 +80,7 @@
         "# Create PyTorch DataLoader for training and validation\n",
         "train_dataset = SeqCatBalancedDataset(dataframe,\n",
         "                                      sequence,\n",
-        "                                      seq_pipeline,\n",
+        "                                      tokenizer,\n",
         "                                      categories,\n",
         "                                      cat_encoders)\n",
         "# Create a balanced sampler based on the dataset\n",
@@ -97,33 +98,11 @@
         "\n",
         "val_dataset = SeqCatBalancedDataset(test,\n",
         "                                    sequence,\n",
-        "                                    seq_pipeline,\n",
+        "                                    tokenizer,\n",
         "                                    categories,\n",
         "                                    cat_encoders)\n",
         "\n",
         "val_loader = DataLoader(val_dataset, batch_size=16, shuffle=False)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JlDY4pvQAqcN",
-        "outputId": "25852a3d-6bf4-4fa6-8c78-f512a5eb4720"
-      },
-      "outputs": [],
-      "source": [
-        "# Debug\n",
-        "for batch_sequence, batch_categorical, batch_y in train_loader:\n",
-        "  # print(batch_sequence.shape)\n",
-        "  # print(batch_categorical.shape)\n",
-        "  # print(batch_y.shape)\n",
-        "  for i in range(16):\n",
-        "    print(batch_y[i,0,0])\n",
-        "  break"
       ]
     },
     {
@@ -138,8 +117,6 @@
       },
       "outputs": [],
       "source": [
-        "tokenizer = AutoTokenizer.from_pretrained(\"Intel/dynamic_tinybert\")\n",
-        "\n",
         "# Initialize the model\n",
         "hidden_dim = 128\n",
         "num_categories = 72\n",
@@ -166,19 +143,14 @@
         "    tinybert_classifier.train()\n",
         "\n",
         "    # Wrap the train_loader with tqdm to create a progress bar\n",
-        "    for batch_sequence, batch_categorical, batch_y in \\\n",
+        "    for batch_sequence, batch_masks, batch_categorical, batch_y in \\\n",
         "        tqdm(train_loader, desc=f\"Epoch {epoch + 1}\", ncols=100):\n",
-        "        batch_sequence, batch_categorical, batch_y = (\n",
-        "            batch_sequence.to(device),\n",
-        "            batch_categorical.to(device),\n",
-        "            batch_y.to(device),\n",
-        "        )\n",
         "\n",
         "        optimizer.zero_grad()\n",
         "        output = tinybert_classifier(\n",
         "            batch_sequence,\n",
-        "            attention_mask_sequence=batch_sequence != tokenizer.pad_token_id,\n",
-        "            input_categorical=batch_categorical\n",
+        "            batch_masks,\n",
+        "            batch_categorical\n",
         "        )\n",
         "        loss = criterion(output, batch_y)\n",
         "        loss.backward()\n",
@@ -214,16 +186,13 @@
         "    y_pred = []\n",
         "\n",
         "    with torch.no_grad():  # Disable gradient computation during validation\n",
-        "        for batch_sequence, batch_categorical, batch_y in tqdm(\n",
+        "        for batch_sequence, batch_masks, batch_categorical, batch_y in tqdm(\n",
         "            dataloader, desc=\"Validation\", ncols=100):\n",
-        "            (batch_sequence, batch_categorical, batch_y) = (\n",
-        "                batch_sequence.to(device), batch_categorical.to(device), batch_y.to(device)\n",
-        "            )\n",
         "\n",
         "            # Forward pass\n",
         "            output = model(batch_sequence,\n",
-        "                           attention_mask_sequence=batch_sequence != tokenizer.pad_token_id,\n",
-        "                           input_categorical=batch_categorical)\n",
+        "                           batch_masks,\n",
+        "                           batch_categorical)\n",
         "\n",
         "            # Convert probabilities to binary predictions (0 or 1)\n",
         "            predictions = (output > 0.5).float()\n",
