Slight organization improvement

--- a/experiments_notebook/hybrid_model.ipynb
+++ b/experiments_notebook/hybrid_model.ipynb
@@ -107,14 +107,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "z_uzK1_EZ8LQ",
-        "outputId": "a79b52af-2804-470e-ad35-800468c3491e"
-      },
+      "execution_count": 5,
+      "metadata": {},
       "outputs": [],
       "source": [
         "# Initialize the model\n",
@@ -125,18 +119,27 @@
         "\n",
         "# Define loss and optimizer\n",
         "criterion = nn.BCELoss()\n",
-        "optimizer = optim.Adam(tinybert_classifier.parameters(), lr=1e-5)\n",
-        "\n",
+        "optimizer = optim.Adam(tinybert_classifier.parameters(), lr=1e-5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z_uzK1_EZ8LQ",
+        "outputId": "a79b52af-2804-470e-ad35-800468c3491e"
+      },
+      "outputs": [],
+      "source": [
         "# Define the number of iterations\n",
         "num_epochs = 1\n",
         "num_iterations = len(train_loader) * num_epochs\n",
         "\n",
         "# Lists to store loss values\n",
         "losses = []\n",
-        "\n",
-        "# Define loss and optimizer\n",
-        "criterion = nn.BCELoss()\n",
-        "optimizer = optim.Adam(tinybert_classifier.parameters(), lr=1e-5)\n",
         "\n",
         "# Train the model\n",
         "for epoch in range(num_epochs):\n",
@@ -170,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -178,7 +181,22 @@
         "id": "LoY4NjpnQ6ah",
         "outputId": "c387da49-d118-4529-e7aa-9e7c8579f073"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Validation: 100%|█████████████████████████████████████████████| 59134/59134 [41:31<00:00, 23.74it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "F1 Score on Test Set: 0.4433680587245916\n"
+          ]
+        }
+      ],
       "source": [
         "def validate(model, dataloader):\n",
         "    model.eval()  # Set the model to evaluation mode\n",
@@ -206,26 +224,6 @@
         "# Call the validate function to get the F1 score\n",
         "f1_score = validate(tinybert_classifier, val_loader)\n",
         "print(f\"F1 Score on Test Set: {f1_score}\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nXu9ys0zCVaf",
-        "outputId": "c49ae828-f2ad-4248-f546-acc43f62ba3d"
-      },
-      "outputs": [],
-      "source": [
-        "# Debug\n",
-        "for batch_sequence, batch_categorical, batch_y in val_loader:\n",
-        "  print(batch_sequence.shape)\n",
-        "  print(batch_categorical.shape)\n",
-        "  print(batch_y.shape)\n",
-        "  break"
       ]
     }
   ],
